# pv_pred

./: .env  .gitignore  main.py  pyproject.toml  run_agent.sh  sweep.py  sweep_config.yaml  tree.txt
checkpoints/: pretrained_model_best.pth
checkpoints/devout_wildflower/: eval_res.txt
checkpoints/ruby-forest/: best.pth  config.json  results.txt
checkpoints/run-20250609_161629-24gj2jkn/: run-24gj2jkn.wandb
checkpoints/run-20250609_161629-24gj2jkn/files/: best_model.pth  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
checkpoints/whole-dust/: best.pth  res.txt
data/: plot_data.py  recursive_csv_desc.py
data/own_data/: 19_03_25-29_03_25.csv  19_05_25-29_05_25-raw.csv  19_05_25-29_05_25.csv  describe_csvs.py  get_weather.py  hourly_sampling.py  merge_strings.py  weather_15000_2025-03-19-2025-03-29.csv  weather_15000_2025-05-19-2025-05-29.csv
data/transfer_learning_data/: PV Plants Datasets_62030198.csv  PV Plants Datasets_62032213.csv  PV Plants Datasets_73060645.csv  PV Plants Datasets_73061935.csv  PV Plants Datasets_84071566.csv  PV Plants Datasets_84071567.csv  PV Plants Datasets_84071568.csv  PV Plants Datasets_84071569.csv  PV Plants Datasets_84071570.csv  PV Plants Metadata.csv  PV Plants Metadata.xlsx
data/transfer_learning_data/weather_files/: Braga_weather.csv  Faro_weather.csv  Lisbon_weather.csv  Loule_weather.csv  Setubal_weather.csv  Tavira_weather.csv
src/evals/: transformer_accuracy.py
src/transformer_based/: pretrain.py
